- #13166: Add __str__ to database.*Distribution for nicer output [guillaume]
- #13614: Fix register failure with invalid rst in description [julien c,
  mathieu, pierre paul, éric]
- #13399: Display error message instead of unhandled traceback for missing
  actions, commands and options [patrice]
- #10374: Recreate scripts everytime build_scripts is called [pierre paul]

1.0a4 - 2012-03-13
------------------

- Remove type check for commands in favor of minimal duck type check [tarek]
- Add setup_hook, run between setup.cfg parsing and any other action [tarek]
- Allow configuring command classes in setup.cfg [tarek]
- Add description-file to setup.cfg [tarek]
- Make Manifest.read_template accept file objects [tarek]
- Replace MANIFEST.in with extra_files field in setup.cfg for sdist [tarek]
- Abandon converter idea for d1-d2 migration [tarek]
- Make 'include' default action for extra_files lines [tarek]
- Rename py_modules to modules in setup.cfg [tarek]
- Add detection of files in mkcfg [tarek]
- Remove core module [tarek]
- Remove log module, use standard logging with 'distutils2' logger name [tarek]
- Allow configuring sub-commands in setup.cfg [tarek]
- Add manifest_builders field [tarek]
- Move useful functions from compiler.ccompiler to compiler [tarek]
- Compiler classes should now define a description attribute [tarek]
- Compiler classes are now loaded with their fully qualified names [tarek]
- Allow registering extra compiler classes in setup.cfg [tarek]
- The EMX compiler is gone [tarek]
- Standard command classes are now registered with set_commands;
  command_packages is gone [tarek]
- Move extension module to compiler.extension [tarek]
- The compiler_type attribute of compiler classes is now name [tarek]
- Document the setup.cfg file format in a specification that can be used by
  non-Python developers [tarek, éric, julien j]
- #10409: Fixed the License selector in mkcfg [tarek]
- #9558: Fix build_ext with VS 8.0 [éric]