@@ -19,6 +19,8 @@ CONTRIBUTORS.txt for full names.  Bug numbers refer to http://bugs.python.org/.
 - #13399: Display error message instead of unhandled traceback for missing
   actions, commands and options [patrice]
 - #10374: Recreate scripts everytime build_scripts is called [pierre paul]
+- #14733: Have pysetup read setup.cfg early enough to find custom commands
+  [éric, janusz]
 
 1.0a4 - 2012-03-13
 ------------------
